Fixed circles alignment.

--- a/resources/public/css/game.css
+++ b/resources/public/css/game.css
@@ -2,20 +2,17 @@
   background: #d3d3d3;
 }
 
-.hex-box {
-  width: 200px;
-  height: 200px;
-  box-sizing: content-box;
-}
-
 .circle {
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
   font-size: 20px;
   text-align: center;
+  display: inline-block;
+  margin: 2px;
   line-height: 50px;
-  padding: 20px;
+  vertical-align: top;
+  box-sizing: border-box;
 }
 
 .empty {
@@ -30,11 +27,10 @@
 .white {
   background: #fff;
   color: #000;
-  border: 5px solid #000;
 }
 
 .has-dvonn {
-  border: 1px solid #f00;
+  border: 3px solid #f00;
 }
 
 .full-dvonn {
